added cards data with a javascript object

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <div id="mobile-nav" class="hidden hello">
           <div class="nav-mobile">
-            <button id="close-btn"><span>X</span></button>
+            <button id="close-btn"><span>&times;</span></button>
             <ul>
               <li><a class="a-mobile" href="#hero">Portoflio</a></li>
               <li><a class="a-mobile" href="#about">About</a></li>
@@ -88,125 +88,7 @@
 
     <!-- Works Section -->
     <section class="works">
-      <div class="works-container">
-        <!-- 1st Card -->
-        <div class="card">
-          <img class="card-img" src="./assets/Snapshoot-1.png" alt="work-1" />
-          <div class="card-details">
-            <div class="card-item-mg">
-              <h3 class="card-title">Tonic</h3>
-              <div class="card-info">
-                <span class="info-active">CANOPY</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>Back End Dev</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>2015</span>
-              </div>
-            </div>
-            <p class="card-descrip card-item-mg">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required.
-            </p>
-            <ul class="card-tags card-item-mg">
-              <li class="card-tag">html</li>
-              <li class="card-tag">css</li>
-              <li class="card-tag">javascript</li>
-            </ul>
-            <div class="card-action">
-              <button class="card-btn">See Project</button>
-            </div>
-          </div>
-        </div>
-        <!-- 2nd Card -->
-        <div class="card reverse">
-          <div class="card-details">
-            <div class="card-item-mg">
-              <h3 class="card-title">Multi-Post Stories</h3>
-              <div class="card-info">
-                <span class="info-active">FACEBOOK</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>Full Stack Dev</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>2015</span>
-              </div>
-            </div>
-            <p class="card-descrip card-item-mg">
-              Experimental content creation feature that allows users to add to
-              an existing story over the course of a day without spamming their
-              friends.
-            </p>
-            <ul class="card-tags card-item-mg">
-              <li class="card-tag">html</li>
-              <li class="card-tag">Ruby on rails</li>
-              <li class="card-tag">css</li>
-              <li class="card-tag">javascript</li>
-            </ul>
-            <div class="card-action">
-              <button class="card-btn">See Project</button>
-            </div>
-          </div>
-          <img class="card-img" src="./assets/Snapshoot-2.png" alt="work-2" />
-        </div>
-        <!-- 3rd Card -->
-        <div class="card">
-          <img class="card-img" src="./assets/Snapshoot-3.png" alt="work-3" />
-          <div class="card-details">
-            <div class="card-item-mg">
-              <h3 class="card-title">Facebook 360</h3>
-              <div class="card-info">
-                <span class="info-active">FACEBOOK</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>Full Stack Dev</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>2015</span>
-              </div>
-            </div>
-            <p class="card-descrip card-item-mg">
-              Exploring the future of media in Facebook's first Virtual Reality
-              app; a place to discover and enjoy 360 photos and videos on Gear
-              VR..
-            </p>
-            <ul class="card-tags card-item-mg">
-              <li class="card-tag">html</li>
-              <li class="card-tag">Ruby on rails</li>
-              <li class="card-tag">css</li>
-              <li class="card-tag">javascript</li>
-            </ul>
-            <div class="card-action">
-              <button class="card-btn">See Project</button>
-            </div>
-          </div>
-        </div>
-        <!-- 4th Card -->
-        <div class="card reverse">
-          <div class="card-details">
-            <div class="card-item-mg">
-              <h3 class="card-title">Uber Navigation</h3>
-              <div class="card-info">
-                <span class="info-active">Uber</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>Lead Developer</span>
-                <img src="./assets/Counter.svg" alt="dot" />
-                <span>2015</span>
-              </div>
-            </div>
-            <p class="card-descrip card-item-mg">
-              A smart assistant to make driving more safe, efficient, and fun by
-              unlocking your most expensive computer: your car.
-            </p>
-            <ul class="card-tags card-item-mg">
-              <li class="card-tag">html</li>
-              <li class="card-tag">Ruby on rails</li>
-              <li class="card-tag">css</li>
-              <li class="card-tag">javascript</li>
-            </ul>
-            <div class="card-action">
-              <button class="card-btn">See Project</button>
-            </div>
-          </div>
-          <img class="card-img" src="./assets/Snapshoot-4.png" alt="work-4" />
-        </div>
-      </div>
+      <div id="works-container" class="works-container"></div>
     </section>
 
     <!-- About Me & Q&A Section -->
@@ -360,6 +242,7 @@
         </form>
       </div>
     </section>
+    <!-- <div id="overly"></div> -->
     <script src="./index.js"></script>
   </body>
 </html>
