add popup card with Javascript

--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@
         </form>
       </div>
     </section>
-    <!-- <div id="overly"></div> -->
+    <div id="overly" class="hidden"></div>
+
+    <div id="popupCard" class="hidden-popup"></div>
     <script src="./index.js"></script>
   </body>
 </html>
